sono stanco capo

--- a/tex/biblio.bib
+++ b/tex/biblio.bib
@@ -116,8 +116,7 @@
 	keywords = {linear algebra;history;eigenvalues and eigenfunctions;linear programming;large-scale systems;equations;programmable control;matrix decomposition;sparse matrices;art},
 	doi = {10.1109/MCISE.2000.814652},
 	publisher = {IEEE Computer Society},
-	address = {Los Alamitos, CA, USA},
-	month = {jan}
+	address = {Los Alamitos, CA, USA}
 }
 @ARTICLE{gauss,
 	
@@ -197,4 +196,104 @@
 	journal={arXiv: Quantum Physics},
 	year={1997},
 	url={https://api.semanticscholar.org/CorpusID:17427654}
+}
+@inproceedings{theo,
+	title={Pitch-shifting algorithm design and applications in music},
+	author={Th{\'e}o Royer},
+	year={2019},
+	url={https://api.semanticscholar.org/CorpusID:210144158}
+}
+@book{AudioEffects,
+	title={Audio Effects: Theory, Implementation
+	and Application},
+	author={Reiss, Joshua D. and McPherson, Andrew P.},
+	year={2015},
+	publisher={CRC Press}
+}
+@book{dafx,
+	author = {Zolzer, Udo},
+	title = {DAFX: Digital Audio Effects},
+	year = {2011},
+	isbn = {0470665998},
+	publisher = {Wiley Publishing},
+	edition = {2nd},
+	abstract = {The rapid development in various fields of Digital Audio Effects, or DAFX, has led to new algorithms and this second edition of the popular book, DAFX: Digital Audio Effects has been updated throughout to reflect progress in the field. It maintains a unique approach to DAFX with a lecture-style introduction into the basics of effect processing. Each effect description begins with the presentation of the physical and acoustical phenomena, an explanation of the signal processing techniques to achieve the effect, followed by a discussion of musical applications and the control of effect parameters. Topics covered include: filters and delays, modulators and demodulators, nonlinear processing, spatial effects, time-segment processing, time-frequency processing, source-filter processing, spectral processing, time and frequency warping musical signals.Updates to the second edition include:Three completely new chapters devoted to the major research areas of: Virtual Analog Effects, Automatic Mixing and Sound Source Separation, authored by leading researchers in the field .Improved presentation of the basic concepts and explanation of the related technology.Extended coverage of the MATLABTM scripts which demonstrate the implementation of the basic concepts into software programs.Companion website (www.dafx.de) which serves as the download source for MATLABTM scripts, will be updated to reflect the new material in the book.Discussing DAFX from both an introductory and advanced level, the book systematically introduces the reader to digital signal processing concepts, how they can be applied to sound and their use in musical effects. This makes the book suitable for a range of professionals including those working in audio engineering, as well as researchers and engineers involved in the area of digital signal processing along with students on multimedia related courses.}
+}
+@book{puckette,
+author = {Puckette, Miller},
+title = {The Theory and Technique of Electronic Music},
+year = {2007},
+isbn = {9789812700773},
+publisher = {World Scientific Publishing Co., Inc.},
+address = {USA},
+abstract = {This is the first book to develop both the theory and the practice of synthesizing musical sounds using computers. Each chapter starts with a theoretical description of one technique or problem area and ends with a series of working examples (over 100 in all), covering a wide range of applications. A unifying approach is taken throughout; chapter two, for example, treats both sampling and wavetable synthesis as special cases of one underlying technique. Although the theory is presented quantitatively, the mathematics used goes no further than trigonometry and complex numbers. The examples and supported software along with a machine-readable version of the text are available on the web and maintained by a large online community. The Theory and Techniques of Electronic Music is valuable both as a textbook and as professional reading for electronic musicians and computer music researchers.}
+}
+@ARTICLE{phasevocoderog,
+	author={Flanagan, J. L. and Golden, R. M.},
+	journal={The Bell System Technical Journal}, 
+	title={Phase vocoder}, 
+	year={1966},
+	volume={45},
+	number={9},
+	pages={1493-1509},
+	keywords={},
+	doi={10.1002/j.1538-7305.1966.tb01706.x}}	@INPROCEEDINGS{leakage,
+		author={Baranov, Georgii D. and Matus, Konstantin I. and Vaganov, Michail A. and Bubnov, Evgeny A.},
+		booktitle={2019 IEEE Conference of Russian Young Researchers in Electrical and Electronic Engineering (EIConRus)}, 
+		title={Spectral Analysis Algorithm for the Diagnosis of Electrical Machines}, 
+		year={2019},
+		volume={},
+		number={},
+		pages={424-429},
+		keywords={Harmonic analysis;Discrete Fourier transforms;Frequency measurement;Spectral analysis;Signal resolution;Time measurement;spectral analysis;FFT;DFT;discrete - time Fourier transform (DTFT);spectral leakage;current harmonics;voltage harmonics;zero extension},
+		doi={10.1109/EIConRus.2019.8657020}}
+@misc{pystft,
+	author = {Luchies, Adam},
+	title = {stft},
+	year = {2019},
+	publisher = {GitHub},
+	journal = {GitHub repository},
+	howpublished = {\url{https://github.com/aluchies/stft}},
+	commit = {eedabc48e16545e83af2e17b9dcd77f129ed804a}
+}	
+@misc{jentgent,
+	author = {JentGent},
+	title = {pitch-shifting},
+	year = {2023},
+	publisher = {GitHub},
+	journal = {GitHub repository},
+	howpublished = {\url{https://github.com/JentGent/pitch-shift}},
+	commit = {eedabc48e16545e83af2e17b9dcd77f129ed804a}
+}
+@article{pvatutorial,
+	title={The Phase Vocoder: A Tutorial},
+	author={Mark Dolson},
+	journal={Computer Music Journal},
+	year={1986},
+	volume={10},
+	pages={14},
+	url={https://api.semanticscholar.org/CorpusID:1838187}
+}	
+@article{Laroche,
+	title={Improved phase vocoder time-scale modification of audio},
+	author={Jean Laroche and Mark Dolson},
+	journal={IEEE Trans. Speech Audio Process.},
+	year={1999},
+	volume={7},
+	pages={323-332},
+	url={https://api.semanticscholar.org/CorpusID:1204160}
+}
+@article{doneright,
+	title={Phase vocoder done right},
+	author={Zdeněk Průvsa and Nicki Holighaus},
+	journal={2017 25th European Signal Processing Conference (EUSIPCO)},
+	year={2017},
+	pages={976-980},
+	url={https://api.semanticscholar.org/CorpusID:27116145}
+}
+@inproceedings{fuckhorizontalcoherence,
+	title={An Efficient Phasiness Reduction Technique for Moderate Audio Time-scale Modification},
+	author={David Dorran and Eugene Coyle and Robert Lawlor},
+	year={2004},
+	url={https://api.semanticscholar.org/CorpusID:17660750}
 }
