--- a/tex/main.tex
+++ b/tex/main.tex
@@ -2,11 +2,12 @@
 \usepackage{pacco}
 \addbibresource{biblio.bib}	
 \begin{document}
-	\title{Bitch Shifting}
+	\title{Pitch Shifting}
 	\author{kotatsu}
 	\date{}
 	\maketitle
 	\tableofcontents
+\input{intro}
 \input{fft}
 \input{phase vocoder}
 \listofalgorithms
